# mikrotik-scraper

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMANDS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  QUICKSTART_DOCKER.md  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  verify_logic_local.py
.github/instructions/: copilot-instructions.md
docs/: ADVANCED_CONFIG.md  ARCHITECTURE.md  AUTHENTICATION_FIX.md  COMMIT_EXAMPLES.md  CONFIGURATION_CHANGES.md  CONFIGURATION_GUIDE.md  ENABLE_API.md  ENVIRONMENT_SETUP.md  FIX_AUTH_ISSUE.md  README.md  ROUTEROS_API.md  SUMMARY.md  TROUBLESHOOTING_AUTH.md  USAGE_EXAMPLES.md
examples/: test-connection.py  test-debug.py  test-ip-services.py  test-login-methods.py  test-new-client.py  test-raw-connection.py  test-routeros-api.py  test-user-management.py
scripts/: commands.sh  setup-dev.sh
src/: analyzer.py  backup_manager.py  backup_orchestrator.py  cli.py  collectors.py  config_orchestrator.py  display.py  inventory.py  main.py  mikrotik_client.py  models.py  sftp_client.py  utils.py
src/mikrotik/: __init__.py  backup_ops.py  client.py  config_ops.py  data_collector.py
tests/: __init__.py  test_models.py
