[project]
name = "mikrotik-inventory"
version = "0.1.0"
description = "Sistema completo per la gestione e analisi dell'infrastruttura Mikrotik"
authors = [
    {name = "L. Oliva", email = "l.oliva@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "routeros-api>=0.17.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "src/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

